--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -431,7 +431,7 @@
                         <li>
                             <span>Alumni</span>
                         </li>
-                      
+
                     </ul>
                     <div class="resp-tabs-container">
                         <div class="resp-tab-content" id="team">
@@ -813,10 +813,10 @@
                                 </li>
                             </ul>
                         </div>
-                       
+
                     </div>
                 </div>
-              
+
             </div>
         </div>
     </div>
@@ -880,7 +880,7 @@
                 </div>
                 <ul>
                     <li class="demo-3">
-                        <a href="@Url.Action("MahindraMMF","work")"><img src="~/Content/images/clients/mahindra-mf-logo.png" alt="mahindra Mutual fund" /></a>
+                        <a href="@Url.Action("MahindraMF","work")"><img src="~/Content/images/clients/mahindra-mf-logo.png" alt="mahindra Mutual fund" /></a>
                     </li>
                     <li>
                         <a href="@Url.Action("NayiSoch","work")"><img src="~/Content/images/clients/star-plus-logo.png" alt="Star Plus" /></a>
@@ -901,8 +901,8 @@
                         <a href="@Url.Action("Phfl","work")"><img src="~/Content/images/clients/piramal-Capital-housing.png" alt="Piramal Capital Housing" /></a>
                     </li>
                     @*<li>
-                            <a href="@Url.Action("Phfl","work")"><img src="~/Content/images/clients/phfl-logo.png" alt="Piramal Housing Finance" /></a>
-                        </li>*@
+            <a href="@Url.Action("Phfl","work")"><img src="~/Content/images/clients/phfl-logo.png" alt="Piramal Housing Finance" /></a>
+        </li>*@
                     <li>
                         <a href="@Url.Action("UCypher","work")"><img src="~/Content/images/clients/uCypher-logo.png" alt="U Cypher" /></a>
                     </li>
@@ -913,14 +913,15 @@
                     </li>
 
                     <li>
-                        <a style="cursor:default"><img src="~/Content/images/clients/editage.png" alt="editage" /></a>
+                        <a href="@Url.Action("EditageInsights","work")"><img src="~/Content/images/clients/editage.png" alt="editage" /></a>
+                    </li>
+                    <li>
+                        <a style="cursor:default"><img src="~/Content/images/clients/dubsmash.png" alt="Dubsmash" /></a>
                     </li>
                     <li>
                         <a href="@Url.Action("OnePlus","work")"><img src="~/Content/images/clients/one-plus-logo.png" alt="One Plus" /></a>
                     </li>
-                    <li>
-                        <a tyle="cursor:default"><img src="~/Content/images/clients/pedder.png" alt="Pedder" /></a>
-                    </li>
+
                     <li>
                         <a href="@Url.Action("brickex","work")"><img src="~/Content/images/clients/brickex-logo.png" alt="Brickex" /></a>
                     </li>
@@ -928,11 +929,13 @@
                     <li>
                         <a href="@Url.Action("IndiaRF","work")"><img src="~/Content/images/clients/rf-india-logo.png" alt="RF India" /></a>
                     </li>
-
+                    <li>
+                        <a style="cursor:default"><img src="~/Content/images/clients/pedder.png" alt="Pedder" /></a>
+                    </li>
                     <li> <a style="cursor:default"><img src="~/Content/images/clients/evolis.png" alt="Evolis" /></a> </li>
                     @*<li>
-                            <a href="@Url.Action("bql","work")"><img src="~/Content/images/clients/indo-count-logo.png" alt="Boutique Living" /></a>
-                        </li>*@
+            <a href="@Url.Action("bql","work")"><img src="~/Content/images/clients/indo-count-logo.png" alt="Boutique Living" /></a>
+        </li>*@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/lkp-logo.png" alt="LKP" /></a>
                     </li>
@@ -1132,6 +1135,15 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="@Url.Action("VYNG","work")">
+                                        <img src="~/Content/work/images/thums/vyng-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>VYNG</h4>
+                                            <p>Enable linking characters on Star Plus with real-world relationships in a way never done before.</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="@Url.Action("Total","work")">
                                         <img src="~/Content/work/images/thums/total-thum.jpg" alt="">
                                         <div class="caption">
@@ -1172,7 +1184,7 @@
                         <div class="resp-tab-content" id="Experiences">
                             <ul>
                                 <li>
-                                    <a href="@Url.Action("MahindraMMFExperience","work")">
+                                    <a href="@Url.Action("MahindraMFExperience","work")">
                                         <img src="~/Content/work/images/thums/mmf-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>Mahindra Mutual Fund</h4>
@@ -1277,10 +1289,10 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="@Url.Action("Kullfi","work")">
+                                    <a href="@Url.Action("Kulfi","work")">
                                         <img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="">
                                         <div class="caption">
-                                            <h4>Kulfi</h4>
+                                            <h4>Kullfi</h4>
                                             <p>She sings about anything!</p>
                                         </div>
                                     </a>
@@ -1449,25 +1461,25 @@
                 <div class="swiper-container showreel-videos">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="~/Content/images/video-size.png" alt="Video-Size">
 
-                            <div class="video-wrapp fadeRight" data-t-show="2">
-                                <video poster="~/Content/images/sparkt-content-showreel.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                    <source src="https://youtu.be/BiWDL1zPwg4" type="video/youtube" />
-                                </video>
+                            <div class="video-wrapp ">
+                                <div class="videoWrapper">
+
+                                    <iframe data-src="https://www.youtube.com/embed/BiWDL1zPwg4" src="" frameborder="0" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="video-wrapp fadeRight" data-t-show="2">
-                                <img src="~/Content/images/video-size.png" alt="Video-Size">
-                                <video poster="~/Content/images/story-of-sparkt.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                    <source src="https://youtu.be/Fq3yy7Dar24" type="video/youtube" />
-                                </video>
+                            <div class="video-wrapp ">
+                                <div class="videoWrapper">
+
+                                    <iframe data-src="https://www.youtube.com/embed/Fq3yy7Dar24" src="" frameborder="0" allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination" id="sliderClick"></div>
 
                 </div>
             </div>
@@ -1543,28 +1555,28 @@
                                                 <li id="li4">
                                                     <a href="javascript:void(0);" class="clr-yellow">
                                                         <i class="border"></i><span class="icons"><img src="~/Content/images/icons/xms-user.png" alt=""></span><span class="title">
-                                                            <label>USER</label>
+                                                            <label>CONSUMER</label>
                                                         </span>
                                                     </a>
                                                 </li>
                                                 <li id="li5">
                                                     <a href="javascript:void(0);" class="clr-blue">
                                                         <i class="border"></i><span class="icons"><img src="~/Content/images/icons/xms-product.png" alt=""></span><span class="title">
-                                                            <label>PRODUCT</label>
+                                                            <label>PRODUCTS</label>
                                                         </span>
                                                     </a>
                                                 </li>
                                                 <li id="li6">
                                                     <a href="javascript:void(0);" class="clr-purple">
                                                         <i class="border"></i><span class="icons"><img src="~/Content/images/icons/xms-distributor.png" alt=""></span><span class="title">
-                                                            <label>DISTRIBUTOR</label>
+                                                            <label>DISTRIBUTORS</label>
                                                         </span>
                                                     </a>
                                                 </li>
                                                 <li id="li7">
                                                     <a href="javascript:void(0);" class="clr-skyblue">
                                                         <i class="border"></i><span class="icons"><img src="~/Content/images/icons/xms-transaction.png" alt=""></span><span class="title">
-                                                            <label>TRANSACTION</label>
+                                                            <label>TRANSACTIONS</label>
                                                         </span>
                                                     </a>
                                                 </li>
@@ -1908,5 +1920,5 @@
             </div>
         </div>
     </div>
-    
+
 </main>
