--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -3,7 +3,7 @@
     <div class="client-works">
         <ul id="mahindra" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("MahindraTah","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tah-thum.jpg" alt="" /> <span>Kar Bachat Yojana</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MAHINDRA MUTUAL FUND</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MAHINDRA MUTUAL FUND</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("MahindraNfoLaunches","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="" /> <span>MMF NFO Launches</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("MahindraBadhatYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/badhat-yojana-thum.jpg" alt="" /> <span>MMF BADHAT YOJANA</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("MahindraUnnati","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="" /> <span>UNNATI EMERGING BUSINESS YOJANA</span> </a> </li>
@@ -17,6 +17,7 @@
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("HSPubh","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="" /> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Kullfi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="" /> <span>KULFI</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Khichdi","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/khichadi-thum.jpg" alt="" /> <span>KHICHDI</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Vyng","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/vyng-thum.jpg" alt="" /> <span>VYNG</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Tgilc","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tgilc-thums.jpg" alt="" /> <span>TGILC</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("Pow","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pow-thum.jpg" alt="" /> <span>'POW' Bandhi Yuddh ke</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("JungleBook","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/junglebook-thum.jpg" alt="" /> <span>The Jungle Book</span> </a> </li>
@@ -28,8 +29,8 @@
             <li class="fadeRight t-animated" data-t-show="14"><a href="@Url.Action("Ikyawann","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="" /> <span>Ikyawann</span> </a> </li>
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
-        <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
-        <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
+    <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
+    <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
         </ul>
         <ul id="star" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
