--- a/Sparkt.WebApp/Views/work/DancePlus2.cshtml
+++ b/Sparkt.WebApp/Views/work/DancePlus2.cshtml
@@ -60,7 +60,7 @@
                         <div class="creative-assets " style="background-image: url(../Content/work/images/nach-slide-2-bg.jpg);">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h4>DIGITAL EXCLUSIVE CONTENT POWERED BY INFLUENCERS FROM THE SHOW AND THE CHANNEL</h4>
+                                    <h4>Digital exclusive content powered by influencers from the show and the channel</h4>
                                 </div>
                                 <div class="slickSlider-3d">
                                     <span class="mobileOverlay"> <img src="~/Content/work/images/mobileoverlayimg.png" class="portrait" alt="" /> <img src="~/Content/work/images/mobileoverlayimgHorizen.png" class="horizontal" alt="" /> </span>
@@ -126,7 +126,7 @@
                         <div class="creative-assets dance-plus-bg">
                             <div class="container">
                                 <div class="assets-title">                                    
-                                    <h3>DRIVING DANCE HYSTERIA ACROSS THE COUNTRY FOR THE <br>AUDITIONS WITH A SOCIALLY INTEGRATED WEBSITE</h3>
+                                    <h3>Driving dance hysteria across the country for the <br>auditions with a socially integrated website</h3>
                                 </div>
                                 <div class="website-operation">
                                     <figure class="figure-img"> <img src="~/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
