--- a/Sparkt.WebApp/Views/work/Dhoni.cshtml
+++ b/Sparkt.WebApp/Views/work/Dhoni.cshtml
@@ -58,7 +58,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>STAYING TRUE TO THE HIGH CINEMATIC AND EMOTIONAL VALUE OF THE MOVIE WITH DYNAMIC CONTENT FORMATS.</h3>
+                                    <h3>Staying true to the high cinematic and emotional value of the movie with dynamic content formats.</h3>
                                 </div>
                                 <div class="mobile-style-carousel">
                                     <div class="mobile-wrapp">
@@ -121,7 +121,7 @@
                         <div class="creative-assets" style="background-image: url(../Content/work/images/star-bg.jpg);">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>BREAKING THE CODE BY DELIVERING AN ELEVATED IMMERSIVE EXPERIENCE.</h3>
+                                    <h3>Breaking the code by delivering an elevated immersive experience.</h3>
                                 </div>
 
                                 <div class="three-img-grid-wrapp">
