--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -17,7 +17,7 @@
     "@@type":
     "@@id": "https://youtu.be/kxRe7kSkBUo",
     "url":"https://youtu.be/kxRe7kSkBUo",
-    "description": "BUILDING #NOTSHAADIMATERIAL CONVERSATIONS WITH UGC VIDEOS ALONG WITH A SET OF EXCLUSIVE CONTENT LINKING THE COMMUNICATION TO THE CHARACTER",
+    "description": "Building not shaadi material conversations with ugc videos along with a set of exclusive content linking the communication to the character",
     "duration": "1M56S",
     "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ikyawann-cover.jpg",
     "uploadDate":"05/01/2018",
@@ -64,7 +64,7 @@
                         <div class="creative-assets" style="background-image: url(../Content/work/images/nach-slide-2-bg.jpg);">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h4>BUILDING #NOTSHAADIMATERIAL CONVERSATIONS WITH UGC VIDEOS ALONG WITH A SET OF EXCLUSIVE CONTENT LINKING THE COMMUNICATION TO THE CHARACTER</h4>
+                                    <h4>Building #NOTSHAADIMATERIAL conversations with ugc videos along with a set of exclusive content linking the communication to the character</h4>
                                 </div>
                                 <div class="mobile-style-carousel">
                                     <div class="mobile-wrapp">
@@ -114,7 +114,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>#NOTSHAADIMATERIAL BECAME A TRENDING TOPIC ORGANICALLY DRAWING IN THE VIEWERS AND THE INFLUENCERS ALIKE</h3>
+                                    <h3>#NOTSHAADIMATERIAL became a trending topic organically drawing in the viewers and the influencers alike</h3>
                                 </div>
                                 <div class="project fadeIn" data-t-show="1">
                                     <div class="project__card">
