--- a/Sparkt.WebApp/Views/work/Index.cshtml
+++ b/Sparkt.WebApp/Views/work/Index.cshtml
@@ -53,8 +53,8 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>
-                                        DIGITAL EXCLUSIVE CONTENT AND INNOVATIONS IN FORMAT
-                                        TO KEEP THE AUDIENCE HOOKED THROUGH THE SEASON
+                                        Digital exclusive content and innovations in format
+                                        to keep the audience hooked through the season
                                     </h4>
                                 </div>
                                 <div class="website-operation">
@@ -89,8 +89,8 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>
-                                        DIGITAL EXCLUSIVE CONTENT AND INNOVATIONS IN FORMAT
-                                        TO KEEP THE AUDIENCE HOOKED THROUGH THE SEASON
+                                        Digital exclusive content and innovations in format
+                                        to keep the audience hooked through the season
                                     </h4>
                                 </div>
                                 <div class="mobile-style-carousel">
@@ -162,8 +162,8 @@
 
                                 <div class="assets-title">
                                     <h4>
-                                        DIGITAL EXCLUSIVE CONTENT AND INNOVATIONS IN FORMAT
-                                        TO KEEP THE AUDIENCE HOOKED THROUGH THE SEASON
+                                        Digital exclusive content and innovations in format
+                                        to keep the audience hooked through the season
                                     </h4>
                                 </div>
 
@@ -232,8 +232,8 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>
-                                        DIGITAL EXCLUSIVE CONTENT AND INNOVATIONS IN FORMAT
-                                        TO KEEP THE AUDIENCE HOOKED THROUGH THE SEASON
+                                        Digital exclusive content and innovations in format
+                                        to keep the audience hooked through the season
                                     </h4>
                                 </div>
                                 <div class="project fadeIn" data-t-show="1">
