--- a/Sparkt.WebApp/Views/work/JungleBook.cshtml
+++ b/Sparkt.WebApp/Views/work/JungleBook.cshtml
@@ -59,7 +59,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>RICH EXPERIENCES WHICH ARE VISUALLY DISRUPTIVE AND GO WELL BEYOND STANDARD TO TRULY ENGAGING THE USER.</h3>
+                                    <h3>Rich experiences which are visually disruptive and go well beyond standard to truly engaging the user.</h3>
                                 </div>
                                 <div class="three-img-carousel-wrapp">
                                     <div class="three-img-carousel">
@@ -85,7 +85,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>DYNAMIC CONTENT FORMATS TO BUILD <br>TRUE ANTICIPATION FOR THE PREMIERE.</h3>
+                                    <h3>Dynamic content formats to build <br>true anticipation for the premiere.</h3>
                                 </div>
 
                                 <div class="three-img-grid-wrapp">
