--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -12,12 +12,12 @@
     {
     "@@context": "https://schema.org",
     "@@type": "VideoObject",
-    "name": "Kulfi Video",
+    "name": "Kullfi Video",
     "VideoList": [{
     "@@type":
     "@@id": "https://youtu.be/1dL2ZhKZDZ8",
     "url":"https://youtu.be/1dL2ZhKZDZ8",
-    "description": "SERIES OF MUSIC VIDEOS SHOWCASING KULLFI’S ABILITY TO SING ABOUT ANYTHING!",
+    "description": "Series of music videos showcasing kullfi’s ability to sing about anything!",
     "duration": "2M30S",
     "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/kulfi-cover.jpg",
     "uploadDate":"05/01/2018",
@@ -60,7 +60,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>SERIES OF MUSIC VIDEOS SHOWCASING KULLFI’S ABILITY <br>TO SING ABOUT ANYTHING!</h3>
+                                    <h3>Series of music videos showcasing kullfi’s ability <br>to sing about anything!</h3>
                                 </div>
                                 <div class="sparkt-carousel">
                                     <div class="mobile-wrapp">
@@ -111,7 +111,7 @@
                         <div class="creative-assets red-base-bg">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>SKIP ADS WITH KULLFI CHARMING VIEWERS <br>TO WATCH HER MUSICAL STORY</h3>
+                                    <h3>Skip ads with kullfi charming viewers <br>to watch her musical story</h3>
                                 </div>
                                 <div class="sparkt-carousel">
                                     <div class="mobile-wrapp">
