--- a/Sparkt.WebApp/Views/work/MadeByMom.cshtml
+++ b/Sparkt.WebApp/Views/work/MadeByMom.cshtml
@@ -58,7 +58,7 @@
                         <div class="creative-assets " style="background-image: url(../Content/work/images/nach-slide-2-bg.jpg);">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h4>ELEVATING THE EMOTIONAL VALUE OF THE FILM BY <br>BLURRING THE LINES BETWEEN REEL AND REAL</h4>
+                                    <h4>Elevating the emotional value of the film by <br>blurring the lines between reel and real</h4>
                                 </div>
                                 <div class="mobile-style-carousel">
                                     <div class="mobile-wrapp">
@@ -164,7 +164,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>DISRUPTION ON YOUTUBE TO EXPERIENCE <br>THE FILMS AND CELEBRATE MOTHER’S DAY</h3>
+                                    <h3>Disruption on youtube to experience <br>the films and celebrate mother’s day</h3>
                                 </div>
                                 <div class="project fadeIn" data-t-show="1">
                                     <div class="project__card">
@@ -183,7 +183,7 @@
                         <div class="creative-assets twitter-bg">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>REFLECTING THE SENTIMENT OF THE AUDIENCE BY <br>SHARING REAL LIFE STORIES</h3>
+                                    <h3>Reflecting the sentiment of the audience by <br>sharing real life stories</h3>
                                 </div>
                                 <div class="twitter-tweets">
                                     <ul>
