--- a/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
@@ -58,8 +58,8 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h3>
-                                        A SERIES OF VOXPOX FILMS IN CONVERSATION WITH OUR <br>
-                                        REAL AUDIENCE DISTRIBUTED ACROSS TV AND DIGITAL
+                                        A series of voxpox films in conversation with our <br>
+                                        real audience distributed across tv and digital
                                     </h3>
                                 </div>
 
@@ -117,7 +117,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>TAKING THE PRODUCT COMMUNICATION WITH MULTIPLE REAL-WORLD RESPONSES ACROSS ONLINE AND OFFLINE COLLATERALS</h3>
+                                    <h3>Taking the product communication with multiple real-world responses across online and offline collaterals</h3>
                                 </div>
 
 
