--- a/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
@@ -42,8 +42,8 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h3>
-                                        PRODUCT KEY VISUALS DEVELOPED INTO
-                                        MULTIPLE CREATIVE ASSETS FOR A RANGE OF TRADITIONAL MEDIA
+                                        Product key visuals developed into
+                                        multiple creative assets for a range of traditional media
                                     </h3>
                                 </div>
 
@@ -68,7 +68,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>EMAILERS AND SOCIAL MEDIA CREATIVES FOR INFORMATION DISSEMINATION ABOUT THE NEW FUND LAUNCHES</h3>
+                                    <h3>Emailers and social media creatives for information dissemination about the new fund launches</h3>
                                 </div>
 
 
@@ -90,7 +90,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>EXTENDING THE CANVAS OF COMMUNICATION ACROSS PORTABLE MEDIA</h3>
+                                    <h3>Extending the canvas of communication across portable media</h3>
                                 </div>
 
 
