--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -17,7 +17,7 @@
     "@@type":
     "@@id": "https://youtu.be/KhctUASVZj4",
     "url":"https://youtu.be/KhctUASVZj4",
-    "description": "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!",
+    "description": "Elevating mahindra mutual fund's brand communication experience in the sms inbox!",
     "duration": "2M",
     "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-textmoji.jpg",
     "uploadDate":"05/01/2018",
@@ -62,42 +62,42 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>FIRST OF ITS KIND, VOICE ENABLED WEBSITE IN THE MUTUAL FUND CATEGORY IN THE COUNTRY</h3>
+                                    <h3>First of its kind, voice enabled website in the mutual fund category in the country</h3>
                                 </div>
                                 <div class="twitter-tweets">
                                     <ul>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/mahindra-veo-1.jpg" alt=""></span>
-                                                <figcaption>MAHINDRA INVITES YOU TO TRY ITS NEW VOICE ENABLED WEBSITE</figcaption>
+                                                <figcaption>Mahindra invites you to try its new voice enabled website</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/mahindra-veo-2.jpg" alt=""></span>
-                                                <figcaption>USERS BEGIN INTERACTION WITH A SIMPLE ‘HELLO M’</figcaption>
+                                                <figcaption>Users begin interaction with a simple ‘HELLO M’</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/mahindra-veo-3.jpg" alt=""></span>
-                                                <figcaption>MAHINDRA WEBSITE VOICE ACTIVATED</figcaption>
+                                                <figcaption>Mahindra website voice activated</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/mahindra-veo-4.jpg" alt=""></span>
-                                                <figcaption>USERS GIVE A VOICE COMMAND</figcaption>
+                                                <figcaption>Users give a voice command</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="">
                                                 <span><img src="~/Content/work/images/mahindra-veo-5.jpg" alt=""></span>
-                                                <figcaption>WEBSITE TAKES THEM TO THE DESIRED LANDING PAGE</figcaption>
+                                                <figcaption>Website takes them to the desired landing page</figcaption>
                                             </figure>
 
                                         </li>
