--- a/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
@@ -82,7 +82,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>TAKING THE PRIMARY COMMUNICATION <br>ACROSS KEY TOUCHPOINTS IN PRINT AND ON-GROUND </h3>
+                                    <h3>Taking the primary communication <br>across key touchpoints in print and on-ground </h3>
                                 </div>
 
 
@@ -105,7 +105,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>PROMOTING THE PRODUCT BY DEMYSTIFYING <br>THE FUND CATEGORY WITH SOCIAL MEDIA CONTENT</h3>
+                                    <h3>Promoting the product by demystifying <br>the fund category with social media content</h3>
                                 </div>
 
 
