--- a/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
+++ b/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
@@ -60,8 +60,8 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>
-                                        DIGITAL EXCLUSIVE CONTENT AND FORMAT INNOVATIONS
-                                        TO KEEP THE AUDIENCE HOOKED THROUGH THE SEASON
+                                        Digital exclusive content and format innovations
+                                        to keep the audience hooked through the season
                                     </h4>
                                 </div>
                                 <div class="mobile-style-carousel">
@@ -129,8 +129,8 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>
-                                        SERIES OF FACEBOOK LIVE EVENTS WITH
-                                        THE CELEBRITY COUPLES CREATING MASS FAN ENGAGEMENTS
+                                        Series of facebook live events with
+                                        the celebrity couples creating mass fan engagements
                                     </h4>
                                 </div>
                                 <div class="project fadeIn" data-t-show="1">
