--- a/Sparkt.WebApp/Views/work/NayiSoch.cshtml
+++ b/Sparkt.WebApp/Views/work/NayiSoch.cshtml
@@ -37,7 +37,7 @@
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-                <h1>NAYI SOCH</h1>
+                <h1>Nayi Soch</h1>
                 <div class="clear"></div>
                 <span>Wear your Mother's name with pride.</span>
             </div>            
@@ -75,20 +75,21 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h3>
-                                        DISRUPTIONS ON GOOGLE AND YOUTUBE TO EXPERIENCE <br>
-                                        THE FILMS AND CREATE A VIRTUAL JERSEY
+                                        Disruptions on google and YouTube to experience <br>
+                                        the films and create a virtual jersey
+
                                     </h3>
                                 </div>
                                 <div class="project fadeIn" data-t-show="1">
                                     <div class="project__card">
                                         <a class="project__image"><img src="~/Content/work/images/nayi-soch-creative-approch.png" alt=""></a>
                                         <!--<div class="project__detail">
-                                          <h2 class="project__title"><a href="#">CREATIVE APPROACH</a></h2>
+                                          <h2 class="project__title"><a href="#">Creative Approach</a></h2>
                                             <small class="project__category"><a href="#">MAKE YOUR OWN VIRTUAL JERSEY ON A GOOGLE LIGHTBOX BANNER</a></small>
                                         </div>-->
                                     </div>
-                                    <div class="project-text"><p>MAKE YOUR OWN VIRTUAL JERSEY ON A GOOGLE LIGHTBOX BANNER</p></div>
-                                    <div class="project-text right bottom"><p>SERIES OF NAYI SOCH FILMS ON THE YOUTUBE MASTHEAD</p></div>
+                                    <div class="project-text"><p>Make your own virtual jersey on a google lightbox banner</p></div>
+                                    <div class="project-text right bottom"><p>Series of nayi soch films on the YouTube masthead</p></div>
                                 </div>
                             </div>
                         </div>
@@ -97,42 +98,42 @@
                         <div class="creative-assets twitter-bg">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>TWITTER INNOVATION TO FLAUNT A JERSEY WITH <br>YOUR MOTHER’S NAME AS THE PROFILE PICTURE</h3>
+                                    <h3>Twitter innovation to flaunt a jersey with <br>your mother’s name as the profile picture</h3>
                                 </div>
                                 <div class="twitter-tweets">
                                     <ul>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/nayisoch-twitter-tweets-1.jpg" alt=""></span>
-                                                <figcaption>STAR PLUS INVITES USERS TO JOIN THE #NayiSoch CAMPAIGN</figcaption>
+                                                <figcaption>Star plus invites users to join the #NayiSoch campaign</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/nayisoch-twitter-tweets-2.jpg" alt=""></span>
-                                                <figcaption>USERS INTERACT WITH @ViewBag.At STARPLUS WITH #NayiSoch</figcaption>
+                                                <figcaption>Users interact with @ViewBag.At Starplus with #NayiSoch</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/nayisoch-twitter-tweets-3.jpg" alt=""></span>
-                                                <figcaption>THE CHANNEL RESPONDS TO THEM WITH A LINK TO MAKE THEIR CUSTOMISED JERSEY</figcaption>
+                                                <figcaption>The channel responds to them with a link to make their customised jersey</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/nayisoch-twitter-tweets-4.jpg" alt=""></span>
-                                                <figcaption>USERS INPUT THEIR MOTHERS’ NAMES AND DESIRED JERSEY NUMBERS</figcaption>
+                                                <figcaption>Users input their mothers’ names and desired jersey numbers</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-5">
                                             <figure class="hvr-bubble-float-left">
                                                 <span><img src="~/Content/work/images/nayisoch-twitter-tweets-5.jpg" alt=""></span>
-                                                <figcaption>USERS FLAUNT A NAYI SOCH ON THEIR TWITTER PROFILES</figcaption>
+                                                <figcaption>Users flaunt a nayi soch on their twitter profiles</figcaption>
                                             </figure>
 
                                         </li>
@@ -155,16 +156,16 @@
             <div class="result-wrapp">
                 <ul class="fadeUp t-infinity">
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">Video VIEWS</span> <span class="result-points">30</span> <span class="result">MILLION</span> </div>
+                        <div class="result-info "> <span class="result-from">Video views</span> <span class="result-points">30</span> <span class="result">Million</span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">PROFILE PICTURE CHANGES</span> <span class="result-points">2K+</span> <span class="result"></span> </div>
+                        <div class="result-info "> <span class="result-from">Profile picture changes</span> <span class="result-points">2K+</span> <span class="result"></span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">MENTIONS</span> <span class="result-points">100K+</span> <span class="result"></span> </div>
+                        <div class="result-info "> <span class="result-from">Mentions</span> <span class="result-points">100K+</span> <span class="result"></span> </div>
                     </li>
                     <li class="col-4 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">POTENTIAL IMPRESSIONS</span> <span class="result-points">7</span> <span class="result">BILLION</span> </div>
+                        <div class="result-info "> <span class="result-from">Potential impressions</span> <span class="result-points">7</span> <span class="result">Billion</span> </div>
                     </li>
                 </ul>
             </div>
