--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -59,7 +59,7 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>USING PRIMARY CONTENT TO <br>PRODUCE MEDIA-SENSITIVE SLICES</h3>
+                                    <h3>Using primary content to <br>produce media-sensitive slices</h3>
                                 </div>
                                 <div class="mobile-style-carousel">
                                     <div class="mobile-wrapp">
