--- a/Sparkt.WebApp/Views/work/Swp.cshtml
+++ b/Sparkt.WebApp/Views/work/Swp.cshtml
@@ -38,8 +38,8 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>VIRTUAL UNIVERSITY RESIDING ON A RESPONSIVE WEBSITE</h3>
-                                    <p>A SCREENWRITER’S PROGRAM ENABLED THROUGH A RESPONSIVE WEBSITE WHICH TRIANGULATES THE STUDENTS, A WORLD-RENOWNED DEAN AND THE BIGGEST TELEVISION NETWORK IN INDIA THAT WILL ABSORB THE CREAM OF THE CROP AT THE END OF THE PROGRAM.</p>
+                                    <h3>Virtual university residing on a responsive website</h3>
+                                    <p>A screenwriter’s program enabled through a responsive website which triangulates the students, a world-renowned dean and the biggest television network in india that will absorb the cream of the crop at the end of the program.</p>
                                 </div>
                                 <div class="website-operation">
                                     <figure class="figure-img"> <img src="~/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
