--- a/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
+++ b/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
@@ -15,7 +15,7 @@
     "name": "TED TALKS Google Cards Video",
     "@@id": "https://youtu.be/O7XbbSbK5p0",
     "url":"https://youtu.be/O7XbbSbK5p0",
-    "description": "INNOVATING ON GOOGLE SEARCH TO ELEVATE THE DISCOVERY OF TED TALKS INDIA NAYI SOCH",
+    "description": "Innovating on google search to elevate the discovery of ted talks india nayi soch",
     "duration": "T1M51S",
     "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ted-cover.jpg",
     "uploadDate":"05/01/2018"
@@ -61,7 +61,7 @@
                         <div class="creative-assets  ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h4>INNOVATING ON GOOGLE SEARCH TO <br>ELEVATE THE DISCOVERY OF TED TALKS INDIA NAYI SOCH</h4>
+                                    <h4>Innovating on google search to <br>elevate the discovery of ted talks india nayi soch</h4>
                                 </div>
 
 
