--- a/Sparkt.WebApp/Views/work/TextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/TextMoji.cshtml
@@ -15,7 +15,7 @@
     "name": "Text Moji Video",
     "@@id": "https://youtu.be/qdlm51eGDxE",
     "url":"https://youtu.be/qdlm51eGDxE",
-    "description": "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!",
+    "description": "Elevating mahindra mutual fund's brand communication experience in the sms inbox!",
     "duration": "T24S",
     "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-textmoji.jpg",
     "uploadDate":"05/01/2018"
@@ -36,7 +36,7 @@
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
                 <h1>MMF Textmoji</h1>
                 <div class="clear"></div>
-                <span>ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!</span>
+                <span>Elevating mahindra mutual fund's brand communication experience in the sms inbox!</span>
             </div>
         </div>
 
