--- a/Sparkt.WebApp/Views/work/WomensDay.cshtml
+++ b/Sparkt.WebApp/Views/work/WomensDay.cshtml
@@ -61,7 +61,7 @@
                         <div class="creative-assets" style="background-image: url(~/Content/work/images/star-bg.jpg);">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>STAYING TRUE TO THE HIGH CINEMATIC AND EMOTIONAL VALUE OF THE MOVIE WITH DYNAMIC CONTENT FORMATS.</h3>
+                                    <h3>Staying true to the high cinematic and emotional value of the movie with dynamic content formats.</h3>
                                 </div>
 
                                 <div class="mobile-style-carousel">
@@ -125,28 +125,28 @@
                         <div class="creative-assets twitter-bg">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h4>INNOVATIVE USE OF TWITTER CARDS WITH VIDEO QUOTES FROM INSPIRATIONAL DAD DAUGHTER PAIRS INVITING USERS TO SUPPORT NAYI SOCH IN TURN GETTING A RESPONSE WITH THE FULL VIDEO</h4>
+                                    <h4>Innovative use of twitter cards with video quotes from inspirational dad daughter pairs inviting users to support nayi soch in turn getting a response with the full video</h4>
                                 </div>
                                 <div class="twitter-tweets">
                                     <ul>
                                         <li class="col-3">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/womens-twitter-tweets-1.jpg" alt=""></span>
-                                                <figcaption>STAR PLUS INVITES USERS <br>TO ENDORSE NAYI SOCH</figcaption>
+                                                <figcaption>Star plus invites users <br>to endorse nayi soch</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-3">
                                             <figure class="hvr-bubble-float-right">
                                                 <span><img src="~/Content/work/images/womens-twitter-tweets-2.jpg" alt=""></span>
-                                                <figcaption>FULL VIDEO IS SHARED <br>WITH THE USER</figcaption>
+                                                <figcaption>Full video is shared <br>with the user</figcaption>
                                             </figure>
 
                                         </li>
                                         <li class="col-3">
                                             <figure class="hvr-bubble-float-left">
                                                 <span><img src="~/Content/work/images/womens-twitter-tweets-3.jpg" alt=""></span>
-                                                <figcaption>AUTO-TWEET FROM USER’S <br>PROFILE IS PUBLISHED</figcaption>
+                                                <figcaption>Auto-tweet from user’s <br>profile is published</figcaption>
                                             </figure>
 
                                         </li>
@@ -173,8 +173,8 @@
                                         </div>
                                         <figcaption>
                                             <p>
-                                                FIRST-OF-A-KIND INTEGRATED BANNER INNOVATION
-                                                TO SHOWCASE CURATED TWITTER CONVERSATIONS WITH <strong>#NAYISOCH</strong> ON THE GOOGLE DISPLAY NETWORK
+                                                First-of-a-kind integrated banner innovation
+                                                to showcase curated twitter conversations with <strong>#NAYISOCH</strong> on the google display network
                                             </p>
                                         </figcaption>
                                     </figure>
