--- a/Sparkt.WebApp/Views/work/bql.cshtml
+++ b/Sparkt.WebApp/Views/work/bql.cshtml
@@ -43,7 +43,7 @@
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>SEAMLESS ONLINE SHOPPING EXPERIENCE</h3>
+                                    <h3>Seamless online shopping experience</h3>
                                     <p>Luxurious bedding solutions made available online through a responsive website showcasing over 120 designs spread across 16 collections.</p>
                                 </div>
                                 <div class="website-operation">
@@ -79,8 +79,8 @@
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title ">
-                                    <h3>BOUTIQUE LIVING LAUNCHED IN INDIA</h3>
-                                    <p>OPENED DOORS TO AN ASPIRATIONAL BEDDING SOLUTIONS BRAND IN THE COUNTRY THROUGH AN OMNI-CHANNEL MARKETING CAMPAIGN</p>
+                                    <h3>Boutique living launched in india</h3>
+                                    <p>Opened doors to an aspirational bedding solutions brand in the country through an omni-channel marketing campaign</p>
                                 </div>
                                 <div class="three-img-carousel-wrapp">
                                     <div class="three-img-carousel">
