--- a/Sparkt.WebApp/Views/work/brickex.cshtml
+++ b/Sparkt.WebApp/Views/work/brickex.cshtml
@@ -55,7 +55,7 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h3>
-                                        A PLATFORM CONNECTING THE PAN-INDIAN REAL-ESTATE COMMUNITY <br>AND THE CONSUMER WITH A SEAMLESS EXPERIENCE
+                                        A platform connecting the pan-indian real-estate community <br>and the consumer with a seamless experience
                                     </h3>
                                 </div>
                                 <div class="website-operation">
@@ -79,7 +79,7 @@
                                         </script>
                                     </div>
 
-                                    <a href="https://brickex.com" target="_blank" class="view-website">VIEW WEBSITE</a>
+                                    <a href="https://brickex.com" target="_blank" class="view-website">View website</a>
 
                                 </div>
                             </div>
