--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sparkt | A Creative & Digital Marketing Agency in Mumbai</title>
     @*@Styles.Render("~/bundles/css")
-    @Scripts.Render("~/bundles/modernizr")*@
+        @Scripts.Render("~/bundles/modernizr")*@
 
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -64,7 +64,7 @@
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/css/hompage.css" />
 
     <script src='https://www.google.com/recaptcha/api.js?onload=myCallBack&render=explicit' async defer></script>
-    <script src="~/Scripts/User/GoogleCaptcha.js"></script>
+    <script src="~/Scripts/User/GoogleCaptcha.js" defer></script>
     <script type="application/ld+json">
         {
         "@@context": "https://schema.org",
@@ -376,10 +376,9 @@
     <script type="text/javascript" src="~/Content/plugins/scrollmagic/js/plugins/animation.gsap.min.js"></script>
     <script type="text/javascript" src="~/Content/plugins/scrollmagic/js/plugins/debug.addIndicators.min.js"></script>
     <script type="text/javascript" src="~/Content/plugins/swiper-4.2.6/js/swiper.min.js"></script>
-    <script type="text/javascript" src="~/Content/js/functions.js"></script>
+    <script type="text/javascript" src="~/Content/js/functions.js" defer></script>
     @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
-    <script src="~/Scripts/User/SparktHelper.js"></script>
-
+    <script src="~/Scripts/User/SparktHelper.js" defer></script>
     <script>
 
 
@@ -405,8 +404,28 @@
         }
 
     </script>
+    <script>
+        function init() {
+            var vidDefer = document.getElementsByTagName('iframe');
+            for (var i = 0; i < vidDefer.length; i++) {
+                if (vidDefer[i].getAttribute('data-src')) {
+                    vidDefer[i].setAttribute('src', vidDefer[i].getAttribute('data-src'));
+                }
+            }
+        }
+        window.onload = init;
 
+        $('document').ready(function () {
 
-
+            $('#sliderClick').click(function () {
+                var vidDefer = document.getElementsByTagName('iframe');
+                for (var i = 0; i < vidDefer.length; i++) {
+                    var video = vidDefer[i].getAttribute("src");
+                    vidDefer[i].setAttribute("src", "");
+                    vidDefer[i].setAttribute("src", video);
+                }
+            });
+        });
+    </script>
 </body>
 </html>
