--- a/Sparkt.WebApp/Views/work/MahindraTah.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTah.cshtml
@@ -65,7 +65,7 @@
                         <div class="creative-assets mahindra-bg">
                             <div class="container">
                                 <div class="assets-title">
-                                    <h3>TRIGGERING THE CONVERSATION ON TWITTER AND AGGREGATING POLARIZED OPINIONS ON A MICROSITE</h3>
+                                    <h3>Triggering the conversation on twitter and aggregating polarized opinions on a microsite</h3>
                                 </div>
                                 <div class="website-operation">
                                     <figure class="figure-img"> <img src="~/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
