--- a/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt | USports | UCypher - Use Of Data Marketing Sciences";
+    ViewBag.Title = "Sparkt | USports | UCypher";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | USports | UCypher - Use Of Data Marketing Sciences";
-    ViewBag.MetaDescription = "Use Of Data Marketing Sciences";
-    ViewBag.MetaURL = "https://sparkt.in/work/UCypherUseOfDataMS";
+    ViewBag.MetaTitle = "Sparkt | USports | UCypher";
+    ViewBag.MetaDescription = "Naya Sport. Naye Superstars";
+    ViewBag.MetaURL = "https://sparkt.in/work/UCypherUseOfData";
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
@@ -12,10 +12,10 @@
     {
     "@@context": "https://schema.org",
     "@@type": "VideoObject",
-    "name": " UCypher - Use Of Data Marketing Sciences Video",
+    "name": "UCypher Video",
     "@@id": "https://youtu.be/oI9wi82JaLs",
     "url":"https://youtu.be/oI9wi82JaLs",
-    "description": "Use Of Data Marketing Sciences",
+    "description": "Naya Sport. Naye Superstars",
     "duration": "T3M",
     "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ucypher-cover.jpg",
     "uploadDate":"05/01/2018"
